Change .item-after class margin-left to auto, fixing right alignment

--- a/src/less/ios/lists.less
+++ b/src/less/ios/lists.less
@@ -111,7 +111,7 @@
         white-space: nowrap;
         color: #8e8e93;
         .flex-shrink(0);
-        margin-left: 5px;
+        margin-left: auto;
         .flexbox();
         max-height: 28px;
     }
