--- a/src/less/material/lists.less
+++ b/src/less/material/lists.less
@@ -109,7 +109,7 @@
         white-space: nowrap;
         color: #757575;
         .flex-shrink(0);
-        margin-left: 8px;
+        margin-left: auto;
         .flexbox();
         max-height: 28px;
         font-size: 14px;
